Fix typos in community program descriptions

--- a/what we do.html
+++ b/what we do.html
@@ -535,7 +535,7 @@
        style="max-width: 620px;">
     <h1 class="h1">What We Do</h1>
     <p class="mb-0">
-      Bright Future Initiative Tanzania (BFIT) delivers community-driven programs
+      Bright Future Initiative Tanzania (BFIT) delivers community driven programs
       that protect, empower, and uplift vulnerable groups across Tanzania.
     </p>
   </div>
@@ -579,7 +579,7 @@
           <h3 class="h5">Youth Empowerment</h3>
           <p class="mb-0">
             Equipping young people with life skills, mentorship, and opportunities
-            for education and self-reliance.
+            for education and self reliance.
           </p>
         </div>
       </div>
