Fix hyphenation and spacing in about.html

--- a/about.html
+++ b/about.html
@@ -601,7 +601,7 @@ document.addEventListener("DOMContentLoaded", function () {
         </h3>
         <p class="mb-4">
           We monitor progress, evaluate outcomes, and continuously improve
-          our interventions to ensure long-term benefits for communities
+          our interventions to ensure long term benefits for communities
           and future generations.
         </p>
         <a class="btn btn-outline-primary rounded-pill" href="contact.html">
@@ -662,7 +662,7 @@ document.addEventListener("DOMContentLoaded", function () {
       <div class="col-md-6 col-lg-5 offset-lg-1">
         <h2 class="mb-4">Who We Are</h2>
         <p class="text-body mb-4">
-          Bright Future Initiative Tanzania (BFIT) is a community-based non-governmental
+          Bright Future Initiative Tanzania (BFIT) is a community based non governmental
           organization dedicated to empowering vulnerable groups and promoting
           sustainable development across Tanzania.
         </p>
@@ -696,9 +696,9 @@ document.addEventListener("DOMContentLoaded", function () {
     <div class="col">
       <div class="bg-secondary rounded-5 p-4 h-100 text-center">
         <i class="ai-users fs-1 text-primary mb-3"></i>
-        <h4>Community-Centered</h4>
+        <h4>Community Centered</h4>
         <p class="mb-0">
-          Communities are at the heart of our programs and decision-making.
+          Communities are at the heart of our programs and decision making.
         </p>
       </div>
     </div>
