--- a/about.html
+++ b/about.html
@@ -601,7 +601,7 @@ document.addEventListener("DOMContentLoaded", function () {
         </h3>
         <p class="mb-4">
           We monitor progress, evaluate outcomes, and continuously improve
-          our interventions to ensure long term benefits for communities
+          our interventions to ensure long-term benefits for communities
           and future generations.
         </p>
         <a class="btn btn-outline-primary rounded-pill" href="contact.html">
@@ -662,7 +662,7 @@ document.addEventListener("DOMContentLoaded", function () {
       <div class="col-md-6 col-lg-5 offset-lg-1">
         <h2 class="mb-4">Who We Are</h2>
         <p class="text-body mb-4">
-          Bright Future Initiative Tanzania (BFIT) is a community based non governmental
+          Bright Future Initiative Tanzania (BFIT) is a community-based non-governmental
           organization dedicated to empowering vulnerable groups and promoting
           sustainable development across Tanzania.
         </p>
@@ -827,7 +827,7 @@ document.addEventListener("DOMContentLoaded", function () {
           <a class="nav-link text-white px-2 px-lg-4" href="mailto:brightinitiative24@gmail.com">
             brightinitiative24@gmail.com
           </a>
-          <a class="nav-link px-3 px-lg-4" href="#">
+          <a class="nav-link px-3 px-lg-4" href="privacy-policy.html">
             Privacy Policy
           </a>
         </div>
