--- a/about.html
+++ b/about.html
@@ -807,19 +807,21 @@ document.addEventListener("DOMContentLoaded", function () {
     <div class="row py-md-3 mb-4 mb-md-5">
 
       <!-- Left -->
-      <div class="col-md-7 col-lg-6 col-xxl-5 mb-sm-4 mb-md-0">
-        <h2 class="display-4 mb-4 mb-md-5">
-          Building a Brighter Future Together
-        </h2>
-        <div class="d-sm-flex align-items-center">
-          <a class="btn btn-lg btn-primary rounded-0 me-sm-3 me-lg-4" href="contact.html">
-            Get Involved
-          </a>
-          <p class="fs-sm py-3 py-sm-0 ps-sm-2 mb-0">
-            Partner with us to empower communities across Tanzania.
-          </p>
-        </div>
-      </div>
+<div class="col-md-7 col-lg-6 col-xxl-5 mb-sm-4 mb-md-0">
+  <h2 class="display-4 mb-4 mb-md-5">
+    Building a Brighter Future Together
+  </h2>
+
+  <div class="d-sm-flex align-items-center">
+    <a class="btn btn-lg btn-primary rounded-pill me-sm-3 me-lg-4" href="contact.html">
+      Get Involved
+    </a>
+    <p class="fs-sm py-3 py-sm-0 ps-sm-2 mb-0">
+      Partner with us to empower communities across Tanzania.
+    </p>
+  </div>
+</div>
+
 
       <!-- Right -->
       <div class="col-md-5 offset-lg-1 offset-xxl-2 d-flex flex-column">
