Fix typos and update button styles in HTML

--- a/what we do.html
+++ b/what we do.html
@@ -535,7 +535,7 @@
        style="max-width: 620px;">
     <h1 class="h1">What We Do</h1>
     <p class="mb-0">
-      Bright Future Initiative Tanzania (BFIT) delivers community driven programs
+      Bright Future Initiative Tanzania (BFIT) delivers community-driven programs
       that protect, empower, and uplift vulnerable groups across Tanzania.
     </p>
   </div>
@@ -579,7 +579,7 @@
           <h3 class="h5">Youth Empowerment</h3>
           <p class="mb-0">
             Equipping young people with life skills, mentorship, and opportunities
-            for education and self reliance.
+            for education and self-reliance.
           </p>
         </div>
       </div>
@@ -1002,20 +1002,22 @@ document.querySelectorAll('.partner-animate')
   <div class="dark-mode container position-relative zindex-2 pt-4 pt-md-2 pt-xl-4 pt-xxl-5">
     <div class="row py-md-3 mb-4 mb-md-5">
 
-      <!-- Left -->
-      <div class="col-md-7 col-lg-6 col-xxl-5 mb-sm-4 mb-md-0">
-        <h2 class="display-4 mb-4 mb-md-5">
-          Building a Brighter Future Together
-        </h2>
-        <div class="d-sm-flex align-items-center">
-          <a class="btn btn-lg btn-primary rounded-0 me-sm-3 me-lg-4" href="contact.html">
-            Get Involved
-          </a>
-          <p class="fs-sm py-3 py-sm-0 ps-sm-2 mb-0">
-            Partner with us to empower communities across Tanzania.
-          </p>
-        </div>
-      </div>
+     <!-- Left -->
+<div class="col-md-7 col-lg-6 col-xxl-5 mb-sm-4 mb-md-0">
+  <h2 class="display-4 mb-4 mb-md-5">
+    Building a Brighter Future Together
+  </h2>
+
+  <div class="d-sm-flex align-items-center">
+    <a class="btn btn-lg btn-primary rounded-pill me-sm-3 me-lg-4" href="contact.html">
+      Get Involved
+    </a>
+    <p class="fs-sm py-3 py-sm-0 ps-sm-2 mb-0">
+      Partner with us to empower communities across Tanzania.
+    </p>
+  </div>
+</div>
+
 
       <!-- Right -->
       <div class="col-md-5 offset-lg-1 offset-xxl-2 d-flex flex-column">
@@ -1023,7 +1025,7 @@ document.querySelectorAll('.partner-animate')
           <a class="nav-link text-white px-2 px-lg-4" href="mailto:brightinitiative24@gmail.com">
             brightinitiative24@gmail.com
           </a>
-          <a class="nav-link px-3 px-lg-4" href="#">
+          <a class="nav-link px-3 px-lg-4" href="privacy-policy.html">
             Privacy Policy
           </a>
         </div>
