Fix typo in volunteer description

--- a/what we do.html
+++ b/what we do.html
@@ -741,7 +741,7 @@
         <h3 class="h4 mb-3">Volunteer With Us</h3>
         <p class="mb-4">
           Join our mission by volunteering your time, skills, and passion
-          to support community-driven change across Tanzania.
+          to support community driven change across Tanzania.
         </p>
         <a href="contact.html" class="btn btn-outline-primary rounded-pill">
           Become a Volunteer
