Fix image source and clean up HTML structure

--- a/about.html
+++ b/about.html
@@ -752,7 +752,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <div class="col">
           <div class="card-hover">
             <div class="rounded-4 overflow-hidden">
-              <img src="assets/img/ngo/team/01.jpeg"
+              <img src="assets/img/ngo/team/program manager.png"
                    class="img-fluid"
                    alt="">
             </div>
@@ -806,7 +806,7 @@ document.addEventListener("DOMContentLoaded", function () {
   <div class="dark-mode container position-relative zindex-2 pt-4 pt-md-2 pt-xl-4 pt-xxl-5">
     <div class="row py-md-3 mb-4 mb-md-5">
 
-      <!-- Left -->
+    <!-- Left -->
 <div class="col-md-7 col-lg-6 col-xxl-5 mb-sm-4 mb-md-0">
   <h2 class="display-4 mb-4 mb-md-5">
     Building a Brighter Future Together
@@ -821,7 +821,6 @@ document.addEventListener("DOMContentLoaded", function () {
     </p>
   </div>
 </div>
-
 
       <!-- Right -->
       <div class="col-md-5 offset-lg-1 offset-xxl-2 d-flex flex-column">
