--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@ document.addEventListener("DOMContentLoaded", function () {
               <h3>Cultural Enhancement</h3>
               <p class="card-text">
                 Preserving and promoting local cultures, traditions, and heritage
-                through community-based cultural activities.
+                through community based cultural activities.
               </p>
             </div>
           </div>
@@ -922,7 +922,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <div class="col">
           <div class="card-hover">
             <div class="rounded-4 overflow-hidden">
-              <img src="assets/img/ngo/team/01.jpeg"
+              <img src="assets/img/ngo/team/program manager.png"
                    class="img-fluid"
                    alt="">
             </div>
@@ -976,20 +976,21 @@ document.addEventListener("DOMContentLoaded", function () {
   <div class="dark-mode container position-relative zindex-2 pt-4 pt-md-2 pt-xl-4 pt-xxl-5">
     <div class="row py-md-3 mb-4 mb-md-5">
 
-      <!-- Left -->
-      <div class="col-md-7 col-lg-6 col-xxl-5 mb-sm-4 mb-md-0">
-        <h2 class="display-4 mb-4 mb-md-5">
-          Building a Brighter Future Together
-        </h2>
-        <div class="d-sm-flex align-items-center">
-          <a class="btn btn-lg btn-primary rounded-0 me-sm-3 me-lg-4" href="contact.html">
-            Get Involved
-          </a>
-          <p class="fs-sm py-3 py-sm-0 ps-sm-2 mb-0">
-            Partner with us to empower communities across Tanzania.
-          </p>
-        </div>
-      </div>
+     <!-- Left -->
+<div class="col-md-7 col-lg-6 col-xxl-5 mb-sm-4 mb-md-0">
+  <h2 class="display-4 mb-4 mb-md-5">
+    Building a Brighter Future Together
+  </h2>
+
+  <div class="d-sm-flex align-items-center">
+    <a class="btn btn-lg btn-primary rounded-pill me-sm-3 me-lg-4" href="contact.html">
+      Get Involved
+    </a>
+    <p class="fs-sm py-3 py-sm-0 ps-sm-2 mb-0">
+      Partner with us to empower communities across Tanzania.
+    </p>
+  </div>
+</div>
 
       <!-- Right -->
       <div class="col-md-5 offset-lg-1 offset-xxl-2 d-flex flex-column">
@@ -997,7 +998,7 @@ document.addEventListener("DOMContentLoaded", function () {
           <a class="nav-link text-white px-2 px-lg-4" href="mailto:brightinitiative24@gmail.com">
             brightinitiative24@gmail.com
           </a>
-          <a class="nav-link px-3 px-lg-4" href="#">
+          <a class="nav-link px-3 px-lg-4" href="privacy-policy.html">
             Privacy Policy
           </a>
         </div>
