--- a/index.html
+++ b/index.html
@@ -412,6 +412,51 @@
 .hero-text-white {
   color: #ffffff;
 }
+<style>
+.hero-section {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+}
+
+/* FORCE SWIPER HEIGHT */
+.hero-swiper,
+.hero-swiper .swiper-wrapper,
+.hero-swiper .swiper-slide {
+  height: 100%;
+}
+
+.hero-slide {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  transform: scale(1.15);
+  transition: transform 6s ease;
+}
+
+.swiper-slide-active .hero-slide {
+  transform: scale(1);
+}
+
+/* Overlay */
+.hero-overlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(0,0,0,0.45);
+  z-index: 1;
+}
+
+.hero-content {
+  position: relative;
+  z-index: 2;
+}
+
+.hero-text-white {
+  color: #fff;
+}
+
+
 </style>
 
 <section id="hero" class="hero-section">
@@ -511,6 +556,8 @@ document.addEventListener("DOMContentLoaded", function () {
   window.addEventListener("scroll", onScroll);
 });
 </script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
 </section>
 </main>
 
