--- a/about.html
+++ b/about.html
@@ -716,6 +716,7 @@ document.addEventListener("DOMContentLoaded", function () {
   </div>
 </section>
 
+
 <!-- Team -->
 <section class="container pt-5 mt-5 pb-5 mb-5">
   <div class="row">
@@ -771,28 +772,11 @@ document.addEventListener("DOMContentLoaded", function () {
                    alt="">
             </div>
             <div class="border-bottom pt-3 pb-3">
-              <h3 class="h5 mb-1">Gender Officer</h3>
+              <h3 class="h5 mb-1">Gender, Culture and Health Officer</h3>
               <span class="text-muted">Women & Youth</span>
             </div>
           </div>
         </div>
-
-        <div class="col">
-          <div class="card-hover">
-            <div class="rounded-4 overflow-hidden">
-              <img src="assets/img/ngo/team/01.jpeg"
-                   class="img-fluid"
-                   alt="">
-            </div>
-            <div class="border-bottom pt-3 pb-3">
-              <h3 class="h5 mb-1">Health Coordinator</h3>
-              <span class="text-muted">Community Health</span>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
 
   </div>
 </section>
