--- a/contact.html
+++ b/contact.html
@@ -418,15 +418,42 @@
       </div>
 
       <!-- Phone (placeholder – optional) -->
-      <div class="col pb-2">
-        <h4 class="mb-lg-4">Phone</h4>
-        <p class="fs-lg text-muted mb-0">
-          Phone numbers will be provided soon.
-        </p>
-      </div>
+     <div class="col pb-2">
+  <h4 class="mb-lg-4">Phone</h4>
+  <p class="fs-lg mb-0 d-flex align-items-center">
+    <i class="ai-phone fs-5 me-2 text-primary"></i>
+    <a href="tel:+255769203649" class="text-muted text-decoration-none">
+      +255 769 203 649
+    </a>
+  </p>
+</div>
+
 
     </div>
   </div>
+<!-- Business Hours Card -->
+<div class="col pb-2">
+  <div class="bg-secondary rounded-5 p-4 h-100">
+    <h4 class="mb-4">Business Hours</h4>
+
+    <ul class="list-unstyled fs-lg mb-0">
+      <li class="d-flex justify-content-between border-bottom py-2">
+        <span>Monday – Friday</span>
+        <span class="fw-semibold">8:00 AM – 5:00 PM</span>
+      </li>
+
+      <li class="d-flex justify-content-between border-bottom py-2">
+        <span>Saturday</span>
+        <span class="fw-semibold">9:00 AM – 1:00 PM</span>
+      </li>
+
+      <li class="d-flex justify-content-between py-2">
+        <span>Sunday</span>
+        <span class="fw-semibold text-danger">Closed</span>
+      </li>
+    </ul>
+  </div>
+</div>
 
 </section>
 
